name:                TicTacToe
version:             0.1.0.0
synopsis:            A simple Tic-Tac-Toe game using Gloss
description:         This program implements a Tic-Tac-Toe game with a graphical user interface using the Gloss library.
homepage:            https://github.com/yourusername/TicTacToe  -- Replace with your repository
license:             BSD3
license-file:        LICENSE
author:              Your Name
maintainer:          your.email@example.com
copyright:           2024 Your Name
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable TicTacToe
  main-is:             TicTacToe.hs
  -- Modules included in this executable, other than Main.
  other-modules:
      -- List any other modules you have here, if any.
  build-depends:
      base >=4.7 && <5
    , gloss
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
