name:                TicTacToe
version:             0.1.0.0
synopsis:            A simple Tic-Tac-Toe game using Gloss
description:         This program implements a Tic-Tac-Toe game with a graphical user interface using the Gloss library.
homepage:            https://github.com/tail-call/TicTacToe
license:             BSD3
license-file:        LICENSE
author:              Maria Zatiseva
maintainer:          maria@tail-call.ru
copyright:           2025 Maria Zaitseva
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable TicTacToe
  main-is:             TicTacToe.hs
  -- Modules included in this executable, other than Main.
  other-modules:
      -- List any other modules you have here, if any.
  build-depends:
      base >=4.7 && <5
    , gloss
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
